Regression: New 3.1 OBJ exporter is missing Path Mode setting #96399

Closed
opened 2022-03-13 12:44:17 +01:00 by squash · 12 comments

Blender Version
Broken: 3.1
Worked: 3.0

Short description of error
New OBJ exporter is missing "Path Mode" setting for exporting .mtl files.

The options that used to be available were: Auto, Absolute, Relative, Match, Strip Path, Copy. All of them are important.

The new behavior (without any UI option to control it) curiously does not match any of the previous setting. New behavior is like "Relative, but to the source blender file, and not the destination export file".

Note: the bug report originally also talked about lack of Operator Presets, but that part is a duplicate and was fixed by D14519 already.

**Blender Version** Broken: 3.1 Worked: 3.0 **Short description of error** New OBJ exporter is missing "Path Mode" setting for exporting .mtl files. The options that used to be available were: Auto, Absolute, Relative, Match, Strip Path, Copy. All of them are important. The new behavior (without any UI option to control it) curiously does not match any of the previous setting. New behavior is like "Relative, but to the source blender file, and not the destination export file". Note: the bug report originally also talked about lack of Operator Presets, but that part is a duplicate and was fixed by [D14519](https://archive.blender.org/developer/D14519) already.
Author

Added subscriber: @squashmvp

Added subscriber: @squashmvp
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Hi, thanks for the report.
If I understand correctly, this report is a duplicate of #96303 (New 3.1+ OBJ exporter no longer has "operator presets" nor a way to skip modifiers)

Hi, thanks for the report. If I understand correctly, this report is a duplicate of #96303 (New 3.1+ OBJ exporter no longer has "operator presets" nor a way to skip modifiers)
Member

Closed as duplicate of #96303

Closed as duplicate of #96303

Added subscriber: @aras_p

Added subscriber: @aras_p

@squashmvp the "presets are missing" part is fixed as a duplicate, but I just remembered your point about missing "Path Mode". While I don't know if removal of that was by design or not, I'm kinda wondering, which of the Path Mode options were ever used/useful (the options were: Auto, Absolute, Relative, Match, Strip Path, Copy).

@squashmvp the "presets are missing" part is fixed as a duplicate, but I just remembered your point about missing "Path Mode". While I don't know if removal of that was by design or not, I'm kinda wondering, which of the Path Mode options were ever used/useful (the options were: Auto, Absolute, Relative, Match, Strip Path, Copy).
Author

I use Copy, Auto, Absolute, as well as Strip Path depending on the project and where I'm exporting to. Most important to me though are Strip Path and Copy

I use Copy, Auto, Absolute, as well as Strip Path depending on the project and where I'm exporting to. Most important to me though are Strip Path and Copy
Aras Pranckevicius changed title from Obj Export Operator Presets. to New 3.1 OBJ exporter is missing Path Mode setting 2022-04-04 19:55:30 +02:00
Aras Pranckevicius self-assigned this 2022-04-04 19:55:30 +02:00

Changed status from 'Duplicate' to: 'Confirmed'

Changed status from 'Duplicate' to: 'Confirmed'
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Raising prio because of the "regression" part of the issue, feel free to lower again if this feels unappropriate...

Raising prio because of the "regression" part of the issue, feel free to lower again if this feels unappropriate...
Philipp Oeser changed title from New 3.1 OBJ exporter is missing Path Mode setting to Regression: New 3.1 OBJ exporter is missing Path Mode setting 2022-04-27 15:52:41 +02:00

This issue was referenced by 3bc037a7eb

This issue was referenced by 3bc037a7eb8d214aac9d755f8b2dd0e04cdf3a85

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96399
No description provided.